<resources>
    <string name="app_name">BLE-NFC</string>
    <string name="text_encrypted">Encrypted Text</string>
    <string name="text_decrypted">Decrypted Text</string>
    <string name="text_value">Enter Text</string>
    <string name="ble_reader">BLE-Reader</string>
    <string name="nfc_reader">NFC-Reader</string>

    <string name="button_ble">BLE-Beacon</string>
    <string name="button_nfc">NFC-Sender</string>
    <string name="btn_encrypt">Encrypt</string>

    <string name="service_desc">HCE Service</string>
    <string name="aid_description">Application AID</string>
    <string name="broadcast_device">Advertise Encrypted Text</string>
    <string name="ble_not_supported">BLE Not Supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth Not Supported</string>

    <string name="bt_not_enabled_leaving">User declined to enable Bluetooth, exiting Bluetooth Advertisements.</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device.</string>

    <string name="bt_null">Error: Bluetooth object null</string>


    <string name="refresh">Refresh</string>
    <string name="start_error_prefix">Start Advertising failed: </string>
    <string name="start_error_already_started">already started.</string>
    <string name="start_error_too_large">data packet exceeded 31 Byte limit.</string>
    <string name="start_error_unsupported">not supported on this device.</string>
    <string name="start_error_internal">internal error.</string>
    <string name="start_error_too_many">too many advertisers.</string>
    <string name="last_seen">Last Seen:</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">minute ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="empty_list">No devices found - refresh to try again.</string>
    <string name="seconds">seconds.</string>
    <string name="scan_start_toast">Scanning for</string>
    <string name="already_scanning">Scanning already started.</string>
    <string name="no_name">(no name)</string>
    <string name="start_error_unknown">unknown error</string>
    <string name="advertising_timedout">Advertising stopped due to timeout.</string>
    <string name="button_scan">SCANNER - MODE</string>
    <string name="ntn_advertiser">ADVERTISER - MODE</string>
    <string name="advertiser">BLE - NFC  Advertiser</string>
    <string name="scanner">BLE - NFC  Scanner</string>
    <string name="encrypt_first">Encrypt First</string>
    <string name="encrypt_text_enter">Enter text to encrypt</string>
    <string name="encrypt_msg">Encrypt the message to send</string>
</resources>